tests/neg/parser_decl_qualifier_duplicate_const.baa
// RUN: expect-fail
// EXPECT: تكرار 'ثابت' غير مسموح.

ثابت ثابت صحيح قيمة = ١.

صحيح الرئيسية() {
    إرجع قيمة.
}
